# kover

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  hatch_build.py  pyproject.toml  requirements.txt  run_tests.sh  setup.py
.github/workflows/: actions.yml  python-package.yml
benchmarks/: benchmark.py
benchmarks/gridfs/: bench.py
benchmarks/results/: kover.json  motor.json  pymongo.json
examples/: bulk_write.py  gridfs.py  schema.py  transactions.py  update_delete.py
kover/: __init__.py  auth.py  bulk_write_builder.py  client.py  codes.json  codes.py  collection.py  cursor.py  database.py  datatypes.py  enums.py  exceptions.py  helpers.py  kover.py  models.py  msocket.py  schema.py  serializer.py  session.py  socket.py  transaction.py  typings.py  uri_parser.py  utils.py
kover/_internals/: __init__.py  _mixins.py  _serializers.py
kover/bson/: __init__.py  codec_options.py  datetime_ms.py  dbref.py  json_util.py  objectid.py  raw_bson.py  regex.py  son.py  timestamp.py  typings.py
kover/gridfs/: __init__.py  exceptions.py  gridfs.py  models.py
kover/internals/: __init__.py  mixins.py  serializers.py
kover/metadata/: __init__.py  definitions.py
kover/models/: __init__.py  operations.py  other.py  replica_set.py  replset.py
kover/network/: __init__.py  auth.py  compressors.py  msocket.py  resolver.py  serializer.py  transport.py  wirehelper.py
rust/: lib.rs
tests/: test_basic.py  test_gridfs.py  test_invalid_uri.py  test_operations.py  test_repr.py  test_schema.py
tests/cases/: invalid_uris.json
tests/uris/: test_invalid_uri.py
