[package]
name = "kover"
version = "2.7.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"] }

# 🔥 MAXIMUM PERFORMANCE
[profile.release]
opt-level = 3                  # -O3
lto = "fat"                   # whole-program LTO
codegen-units = 1             # slower compile, better code
strip = true                  # remove debug symbols
debug = false                 # no debug info
overflow-checks = false       # no integer overflow panics
debug-assertions = false      # disable debug_assert!
